
syntax ="proto3";

option go_package = "genproto/manager_service";

package manager_service;


// Service for managing support teachers
service ManagerSupportTeacherService {
    rpc Create(CreateManagerSupportTeacher) returns (ManagerSupportTeacher) {}
    rpc GetByID(ManagerSupportTeacherPrimaryKey) returns (ManagerSupportTeacher) {}
    rpc GetAll(GetListManagerSupportTeacherRequest) returns (GetListManagerSupportTeacherResponse) {}
    rpc Update(UpdateManagerSupportTeacher) returns (ManagerSupportTeacher) {}
    rpc Delete(ManagerSupportTeacherPrimaryKey) returns (ManagerSupportTeacherPrimaryKey) {}
}



message ManagerSupportTeacherPrimaryKey {
    string id = 1;
}

message CreateManagerSupportTeacher {
    string fullname = 1;
    string phone = 2;
    string password = 3;
    float salary = 4;
    float ielts_score = 5;
    string ielts_attempts_count = 6;
    string branch = 7;
    string created_at = 8;

}

message ManagerSupportTeacher {
    string id = 1;
    string fullname = 2;
    string phone = 3;
    string password = 4;
    float salary = 5;
    float ielts_score = 6;
    string ielts_attempts_count = 7;
    string branch = 8;
    int64 role_id = 9;
    string login =10;
    string group_id = 11;

}

message UpdateManagerSupportTeacher {
    string id = 1;
    string fullname = 2;
    string phone = 3;
    string password = 4;
    float salary = 5;
    float ielts_score = 6;
    string ielts_attempts_count = 7;
    string branch = 8;
}

message GetListManagerSupportTeacherRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListManagerSupportTeacherResponse {
    int64 count = 1;
    repeated ManagerSupportTeacher manager_support_teachers = 2;
}
